# codeaccelerate

./: README.md
snippet/std_timer/: CMakeLists.txt  example.cpp
snippet/template/: CMakeLists.txt
template/cuda_separate_compile/: CMakelists.txt
template/cuda_separate_compile/cmake/: FindCUDA.cmake
template/cuda_separate_compile/cmake/FindCUDA/: parse_cubin.cmake
template/cuda_separate_compile/src/: main.cu
template/cuda_seperate_compile/: CMakelists.txt
